# prefect

./: README.md
_examples/: 001-example-simple-flow.py  002-example-Dependant-Tasks.py  003-example-Parallel-Tasks.py  004-example-SQL_and_Python.py  Dockerfile  pyproject.toml  sqprefect.yaml
